[package]
name = "strahl-app"
version = "0.1.0"
authors = ["Mario Rincon <mario.rincon.nigro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
strahl = { path = "src/strahl" }
